[package]
name = "lucent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Crystal clear code insights - Fast code metrics analyzer"
homepage = "https://github.com/yourusername/lucent"
repository = "https://github.com/yourusername/lucent"
keywords = ["metrics", "code-quality", "complexity", "analysis", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[lib]
name = "lucent"
path = "src/lib.rs"

[[bin]]
name = "lucent"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system and path handling
walkdir = "2.5"
ignore = "0.4"  # Respects .gitignore

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Output formatting
colored = "2.1"
tabled = "0.15"

# Future: Tree-sitter for parsing (commented out for now)
# tree-sitter = "0.20"
# tree-sitter-rust = "0.20"
# tree-sitter-python = "0.20"
# tree-sitter-javascript = "0.20"

# Future: Progress bars and interactive
# indicatif = "0.17"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
